# FlutterRustTry

./: README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
ios/: libffi_project.dylib
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
plugins/rust_plugin/: README.md  ffigen.yaml  pubspec.yaml
plugins/rust_plugin/android/: build.gradle
plugins/rust_plugin/example/: pubspec.yaml
plugins/rust_plugin/example/android/app/: build.gradle
plugins/rust_plugin/example/ios/Runner/: Info.plist
plugins/rust_plugin/example/ios/Runner.xcodeproj/: project.pbxproj
plugins/rust_plugin/example/lib/: main.dart
plugins/rust_plugin/example/linux/: CMakeLists.txt  my_application.cc
plugins/rust_plugin/example/macos/Runner.xcodeproj/: project.pbxproj
plugins/rust_plugin/example/windows/: CMakeLists.txt
plugins/rust_plugin/example/windows/runner/: Runner.rc  main.cpp
plugins/rust_plugin/ios/Classes/: rust_plugin.c
plugins/rust_plugin/lib/: rust_plugin.dart  rust_plugin_bindings_generated.dart
plugins/rust_plugin/macos/: rust_plugin.podspec
plugins/rust_plugin/src/: CMakeLists.txt  rust_plugin.c
plugins/rust_plugin/src/ffi_project/: Cargo.toml
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+5 files in other folders)
